fixed background image on mobile, adjusted font sizes for mobile, adjusted weather icon for mobile

--- a/src/App.css
+++ b/src/App.css
@@ -13,5 +13,6 @@
 @media (max-width: 576px) {
   .App {
     padding-top: 20px;
+    padding-bottom: 20px;
   }
 }
