--- a/src/MainSection.css
+++ b/src/MainSection.css
@@ -38,7 +38,6 @@ button:hover {
 .MainSection {
   max-width: 600px;
   margin: 0 auto;
-  margin-bottom: 20px;
   border-style: solid;
   border-color: #c25532;
   padding: 10px;
@@ -57,6 +56,11 @@ h2 {
 h6 {
   text-align: center;
   font-style: italic;
+}
+.currentWeatherIcon {
+  display: flex;
+  justify-content: end;
+  margin-right: 10px;
 }
 
 .currentTempWithUnits {
@@ -139,7 +143,20 @@ h6 {
   .weatherForecastDay {
     margin-top: 14px;
   }
+  .maxTemp {
+    font-size: 18px;
+  }
+  .minTemp {
+    font-size: 18px;
+  }
+  .precipitationPercent {
+    font-size: 18px;
+  }
   .otherCurrentDesc {
     text-align: center;
+  }
+  .currentWeatherIcon {
+    display: flex;
+    justify-content: center;
   }
 }
