--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,3 @@
-
+body {
+  background-image: url("./media/itsBrightOutside.gif");
+}
